Fixed Features on Mobile padding

--- a/frontend/src/pages/FeaturesPage.css
+++ b/frontend/src/pages/FeaturesPage.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
   color: #0b285e;
 
-  padding: 8rem 0 4rem 0;
+  padding: 4rem 0 4rem 0;
 }
 
 .features-hero {
